# Multi_Level_Authentication_Demo

./: .clangd  .gitignore  CMakeLists.txt  README.md  assets_test.json  tmp_info.json
.cache/clangd/index/: KGC.cpp.60AE197E2CFE7D97.idx  KGC.h.11CACE97AA989B2A.idx  Process.cpp.D7E2BB9D9658A1F9.idx  Process.h.D6498CACB8E85585.idx  pbc.h.C14E41325EE73DC0.idx  pbc_a1_param.h.339C72F5C892E1F1.idx  pbc_a_param.h.720E25A3DEDA2172.idx  pbc_curve.h.A5C9EE9D3AF638BE.idx  pbc_d_param.h.BD8563AB3A119036.idx  pbc_e_param.h.F464E104B58E309C.idx  pbc_f_param.h.7528E774A0DAFF0C.idx  pbc_field.h.5268D5DCC23817D2.idx  pbc_g_param.h.CE5739DD47363BCF.idx  pbc_i_param.h.2F87798502F9A1C0.idx  pbc_memory.h.7F4332AE8E0F4252.idx  pbc_mnt.h.8A09B6B05B0C8DC4.idx  pbc_pairing.h.15ABF4A0CCF86719.idx  pbc_param.h.D7CF13704453B316.idx  pbc_random.h.69B59CAA85000BE4.idx  pbc_utils.h.B16A6B21C0B0AEB8.idx  test_clpkc.cpp.68456DF9A266BA27.idx
CL_Auth/: CMakeLists.txt  KGC.cpp  Process.cpp  main_pbc.cpp  test_archive.cpp  test_clpkc.cpp  test_ib_liyuan.cpp  test_pbc.cpp  test_wrapper.cpp
CL_Auth/include/: KGC.h  Process.h
OfflineRegister/: CMakeLists.txt  assets.json  loader.cpp  preload.cpp  preprocess.cpp  res_ref.txt  utils.cpp
OfflineRegister/include/: loader.h  preload.h  utils.h
OfflineRegister/lib/: libgmp.la
OfflineRegister/lib/pkgconfig/: gmp.pc
QT_templates/: CMakeLists.txt  CMakeLists.txt.user.df1f7f7  filechosewindow.cpp  filechosewindow.h  filechosewindow.ui  homewindow.cpp  homewindow.ui  loader.cpp  mainwindow.cpp  mainwindow.h
QT_templates/include/: filechosewindow.h  homewindow.h  loader.h  login.h  mainwindow.h  utils.h
QT_templates/src/: filechosewindow.cpp  homewindow.cpp  loader.cpp  login.cpp  main.cpp  mainwindow.cpp  utils.cpp
QT_templates/ui/: filechosewindow.ui  mainwindow.ui
accumulator_auth/: Cargo.toml
accumulator_auth/cpp_acc/: CMakeLists.txt  assets.json  rsa_acc.cpp  test.cpp  utils.cpp
accumulator_auth/cpp_acc/extra/flint2-2.9.0/: instruction.txt
accumulator_auth/cpp_acc/extra/flint2-2.9.0/docs/Flint_290_Docs/html/: .buildinfo  aprcl.html  arith.html  bug_reporting.html  building.html  contributors.html  d_mat.html  d_vec.html  double_extras.html  examples.html  fft.html  flint.html  flintxx.html  fmpq.html  fmpq_mat.html  fmpq_mpoly.html  fmpq_mpoly_factor.html  fmpq_poly.html  fmpq_vec.html  fmpz.html  fmpz_factor.html  fmpz_lll.html  fmpz_mat.html  fmpz_mod.html  fmpz_mod_mat.html  fmpz_mod_mpoly.html  fmpz_mod_mpoly_factor.html  fmpz_mod_poly.html  fmpz_mod_poly_factor.html  fmpz_mod_vec.html  fmpz_mpoly.html  fmpz_mpoly_factor.html  fmpz_poly.html  fmpz_poly_factor.html  fmpz_poly_mat.html  fmpz_poly_q.html  fmpz_vec.html  fq.html  fq_default.html  fq_default_mat.html  (+57 more)
accumulator_auth/cpp_acc/extra/flint2-2.9.0/docs/Flint_290_Docs/html/_static/: classic.css
accumulator_auth/cpp_acc/extra/gmp-6.3.0/include/: gmp.h
accumulator_auth/cpp_acc/extra/gmp-6.3.0/lib/pkgconfig/: gmp.pc  gmpxx.pc
accumulator_auth/cpp_acc/extra/mpfr-4.2.1/lib/: libmpfr.la  libmpfr.so.6.2.1
accumulator_auth/cpp_acc/extra/mpfr-4.2.1/lib/pkgconfig/: mpfr.pc
accumulator_auth/cpp_acc/include/: utils.h
accumulator_auth/cpp_acc/lib/: libgmp.so.10.5.0  libgmpxx.la  libgmpxx.so.4.7.0
accumulator_auth/rust_acc/: Cargo.toml
accumulator_auth/rust_acc/src/: main.rs
accumulator_auth/src/: main.rs
go/: README.md  cls_hello.go  coverter.go  go.mod  kgc.go  process.go
include/: KGC.h  KGC_pariFree.h  KGC_pbc.h  KGC_wrapper.h  Process.h  Process_pairFree.h  Process_pbc.h  Process_wrapper.h  accumulator.h  loader.h  transfer.h  utils.h
java/: README.md
pair_free/: CMakeLists.txt  KGC.hpp  Process.hpp  main.cpp  transfer.h
pki/CAClient/CAClient/: CAClient.pro  CMakeLists.txt  Makefile  certreq.cpp  genkeypair.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
pki/CAClient/core/: rootca.prikey  test_device_1.prikey
pki/CAClient/reqfile/: newnew.csr  newtest2.csr  test_device_1.csr  testtest.csr
pki/CAServer/CAServer/: CAServer.pro  CMakeLists.txt  Makefile  filerecv.cpp  jsonoper.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rootsign.cpp  rootverify.cpp  rvkcert.cpp  ui_mainwindow.h
pki/CAServer/core/: Crl.crl  rootca.crt  rootca.csr  rootca.key  signlist.json
pki/CAServer/reqfiles/: 123.csr  rootca.csr
pki/CAServer/reqfin/: newtest1.csr  newtest3.csr  test_23_10_22_0.csr
pki/CAServer/signedfiles/: 123.crt  newnew.crt  newtest1.crt  newtest2.crt  newtest3.crt  test_23_10_22_0.crt  test_device_1.crt  testtest.crt
python/: README.md  benchmark.py  entity.py  main.py  mcl-pairing.py  pbc-pairing.py  requirements.txt  utils.py
src/: KGC.cpp  KGC_pairFree.cpp  KGC_pbc.cpp  KGC_wrapper.cpp  Process.cpp  Process_pairFree.cpp  Process_pbc.cpp  Process_wrapper.cpp  accumulator.cpp  loader.cpp  transfer.cpp  utils.cpp
test/: test_accumulator.cpp  test_clpkc.cpp  test_clpks.cpp  test_clpks_wrapper.cpp  test_loader.cpp  test_pairFree.cpp  test_serial_unserial.cpp
